tests/liquid/pos/simple/glob-00.js
var glob /*@ { number | v > 10 } */ = 12;

