tests/liquid/neg/typealias/talias-00.js
/*@ type nat = {number | 1000 <= v } */

var z /*@ nat */ = 12;

